--- a/services.yml
+++ b/services.yml
@@ -10,10 +10,10 @@ services:
     expose:
       - 80
     environment:
-      - VIRTUAL_HOST=api.mydomain.com
+      - VIRTUAL_HOST=api.yellowberries.com
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=api.mydomain.com
-      - LETSENCRYPT_EMAIL=myemail@mydomain.com
+      - LETSENCRYPT_HOST=api.yellowberries.com
+      - LETSENCRYPT_EMAIL=myemail@yellowberries.com
       
   admin:
     build:
@@ -25,10 +25,10 @@ services:
     expose:
       - 80
     environment:
-      - VIRTUAL_HOST=admin.mydomain.com
+      - VIRTUAL_HOST=admin.yellowberries.com
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=admin.mydomain.com
-      - LETSENCRYPT_EMAIL=myemail@mydomain.com
+      - LETSENCRYPT_HOST=admin.yellowberries.com
+      - LETSENCRYPT_EMAIL=myemail@yellowberries.com
       
   portal:
     build:
@@ -40,10 +40,10 @@ services:
     expose:
       - 80
     environment:
-      - VIRTUAL_HOST=portal.mydomain.com
+      - VIRTUAL_HOST=portal.yellowberries.com
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=portal.mydomain.com
-      - LETSENCRYPT_EMAIL=myemail@mydomain.com
+      - LETSENCRYPT_HOST=portal.yellowberries.com
+      - LETSENCRYPT_EMAIL=myemail@yellowberries.com
       
 networks:
   default:
